--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@langchain/core": "^0.1.30",
+    "@langchain/openai": "^0.0.14",
     "ai": "^2.2.35",
-    "langchain": "^0.1.20",
     "nuxt": "^3.10.2",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
