--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@langchain/openai": "^0.0.14",
     "@prisma/client": "^5.10.2",
     "ai": "^2.2.35",
+    "h3-formidable": "^1.0.0",
+    "lodash": "^4.17.21",
     "nuxt": "^3.10.2",
     "prisma": "^5.10.2",
     "vue": "^3.4.19",
@@ -21,7 +23,8 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "daisyui": "^4.7.2",
-    "nuxt-lodash": "^2.5.3"
+    "@types/formidable": "^3.4.5",
+    "@types/lodash": "^4.14.202",
+    "daisyui": "^4.7.2"
   }
 }
